src/test/deca/context/valid/divide_int_divide_int_divide_int_context.deca
// Description :
//
//      Test contextuellement correct de la division d'un int avec la division d'un int avec la division d'un int.
//
// Résultats :
//
//      N/A
//
// Historique :
//
//      Créé le 07/06/2023 par le gl03

{
    float y =3/ 2/ 5;
    print(y);
}
