src/test/deca/context/invalid/object/class_instanceof_floatvar.deca
//  Description :
// 
//      Test syntaxiquement correct de l'utilisation d'un instanceof avec un int ou un float
//  Résultats : 
// 
//      N/A
// 
//  Historique :
// 
//      Créé le 13/06 par gl03

{
    float x=5.0;
    float y = 3.0;
    if (x instanceof y){
        
    }
}